--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,43 +1,7 @@
 /* Author: LeQuan Ly
    Copyright: (C) 2017 codekngswd
    
-   Alternate CSS file */
-
-body {
-	background-image: url("../images/alternateWallpaper.JPG");
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-	background-color: #eeeeee;
-}
-
-#navigationBar {
-	width: 100%;
-	height: 60px;
-	left: 0px;
-	top: 0px;
-	background-color: rgba(218, 165, 32, 0.3);
-	position: fixed;
-}
-
-#navigation li {
-	display: inline; 
-	list-style-type: none;
-	padding-right: 75px;
-}
-
-/**
-a {
-	font-family: helvetica;
-	font-size: 1.5vw;
-}
-
-a:link {
-	text-decoration: none;
-	color: white;
-}
-**/
+   Desktop CSS file */
 
 .icon-github {
 	background: url("../images/icons/desktop/github.png");
@@ -66,16 +30,39 @@ a:link {
 	width: 35px;
 	display: inline-block;
 }
+   
+body {
+	background-image: url("../images/alternateWallpaper.JPG");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-color: #eeeeee;
+}
 
-/** Center Content
-div {
+#navigationBar {
+	width: 100%;
+	height: 60px;
+	left: 0px;
+	top: 0px;
+	background-color: rgba(218, 165, 32, 0.3);
+	position: fixed;
+}
+
+#navigation li {
+	display: inline; 
+	list-style-type: none;
+	padding-right: 75px;
+}
+
+#footer {
 	margin: 0;
 	font-family: helvetica;
-	font-size: 4vw;
+	font-size: 2vw;
+	color: white;
 	position: absolute;
-	top: 50%;
+	bottom: 0%;
 	left: 50%;
 	margin-right: -50%;
 	transform: translate(-50%, -50%);
 }
-**/
